--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <body>
 
-    <img src="podi/data/figs/1.png" width="400"  />
+    <img src="podi/data/figs/3a.png" width="400"  />
    
-    <img src="podi/data/figs/2.png" width="400"  />
+    <img src="podi/data/figs/3b.png" width="400"  />
     <p>
     </p>
   </body>
