--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   </head>
   <body>
 
-    <img src= podi/data/figs/3a.png width="400"  />
-   
-    <img src="podi/data/figs/3b.png" width="400"  />
+    <img src= podi/data/figs width="400"  />
     <p>
     </p>
   </body>
