--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
   </head>
   <body>
 
-      $dirname = "podi/data/figs/";
-        $images = glob($dirname."*.png");
-
-       foreach($images as $image) {
-        echo '<img src="'.$image.'" /><br />';
-        }
+    <img src= podi/data/figs/3a.png width="400"  />
       
     <p>
     </p>
