--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
         color:  #000000;
         background: #FFFFFF;
         text-align: center;
-      }
+        }
       p {
         padding-top: 150px;
         font-size: 100%;
-      }
+        }
+      img{ 
+          width = "500"
+        }
       footer {
           padding-top: 250px;
           text-align: center;
@@ -25,7 +28,8 @@
   </head>
   <body>
 
-    <img src= podi/data/figs/3a.png width="400"  />
+    <img src= podi/data/figs/3a.png />
+    <img src= podi/data/figs/3b.png />
       
     <p>
     </p>
