--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
 
     <img src= podi/data/figs/3a.png />
     <img src= podi/data/figs/3b.png />
+    <img src= podi/data/figs/3c.png />
+    <img src= podi/data/figs/3d.png />
+    <img src= podi/data/figs/3e.png />
+    <img src= podi/data/figs/3f.png />
+    <img src= podi/data/figs/3g.png />
+    <img src= podi/data/figs/11.png />
+    <img src= podi/data/figs/12.png />
+    <img src= podi/data/figs/19.png />
+    <img src= podi/data/figs/24.png />
+    <img src= podi/data/figs/25.png />
+    <img src= podi/data/figs/26.png />
+    <img src= podi/data/figs/27.png />
+    <img src= podi/data/figs/28.png />
+    <img src= podi/data/figs/30.png />
+    <img src= podi/data/figs/33.png />
+    <img src= podi/data/figs/34.png />
+    <img src= podi/data/figs/35.png />
       
     <p>
     </p>
