--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <img src= podi/data/figs/3e.png />
     <img src= podi/data/figs/3f.png />
     <img src= podi/data/figs/3g.png />
+      
+ </body>
+ 
+ <body>
+     
     <img src= podi/data/figs/11.png />
     <img src= podi/data/figs/12.png />
     <img src= podi/data/figs/19.png />
