--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <head> 
+        <title>Positive Disruption 2021</title> 
+    </head>
+    
   <body>
 
     <img src= podi/data/figs/3a.png />
