--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
     <head> 
-        <title>Positive Disruption 2021</title> 
+        <title>PD21</title>
+        <p Positive Disruption 2021 Draft Results /p>
     </head>
     
   <body>
@@ -14,19 +15,19 @@
     <img src= podi/data/figs/3e.png />
     <img src= podi/data/figs/3f.png />
     <img src= podi/data/figs/3g.png />
-    <br> <hr> <br> 
-    <img src= podi/data/figs/11.png />
-    <img src= podi/data/figs/12.png />
-    <img src= podi/data/figs/19.png />
-    <img src= podi/data/figs/24.png />
-    <img src= podi/data/figs/25.png />
-    <img src= podi/data/figs/26.png />
-    <img src= podi/data/figs/27.png />
-    <img src= podi/data/figs/28.png />
-    <img src= podi/data/figs/30.png />
-    <img src= podi/data/figs/33.png />
-    <img src= podi/data/figs/34.png />
-    <img src= podi/data/figs/35.png />
+    <br> <hr> <br>
+    <img src= podi/data/figs/11.png /><br>
+    <img src= podi/data/figs/12.png /><br>
+    <img src= podi/data/figs/19.png /><br>
+    <img src= podi/data/figs/24.png /><br>
+    <img src= podi/data/figs/25.png /><br>
+    <img src= podi/data/figs/26.png /><br>
+    <img src= podi/data/figs/27.png /><br>
+    <img src= podi/data/figs/28.png /><br>
+    <img src= podi/data/figs/30.png /><br>
+    <img src= podi/data/figs/33.png /><br>
+    <img src= podi/data/figs/34.png /><br>
+    <img src= podi/data/figs/35.png /><br>
   
   </body>
 
