--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
     <head> 
         <title>PD21</title>
-        <p Positive Disruption 2021 Draft Results /p>
     </head>
     
   <body>
@@ -24,7 +23,8 @@
     <img src= podi/data/figs/26.png /><br>
     <img src= podi/data/figs/27.png /><br>
     <img src= podi/data/figs/28.png /><br>
-    <img src= podi/data/figs/30.png /><br>
+    <img src= podi/data/figs/30.png />
+    <br> <hr> <br>
     <img src= podi/data/figs/33.png /><br>
     <img src= podi/data/figs/34.png /><br>
     <img src= podi/data/figs/35.png /><br>
