--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <img src= podi/data/figs/3f.png />
     <img src= podi/data/figs/3g.png />
     <br> <hr> <br>
-    <img src= podi/data/figs/11.png /><br>
-    <img src= podi/data/figs/12.png /><br>
-    <img src= podi/data/figs/19.png /><br>
-    <img src= podi/data/figs/24.png /><br>
-    <img src= podi/data/figs/25.png /><br>
-    <img src= podi/data/figs/26.png /><br>
-    <img src= podi/data/figs/27.png /><br>
-    <img src= podi/data/figs/28.png /><br>
+    <img src= podi/data/figs/11.png /><br><br>
+    <img src= podi/data/figs/12.png /><br><br>
+    <img src= podi/data/figs/19.png /><br><br>
+    <img src= podi/data/figs/24.png /><br><br>
+    <img src= podi/data/figs/25.png /><br><br>
+    <img src= podi/data/figs/26.png /><br><br>
+    <img src= podi/data/figs/27.png /><br><br>
+    <img src= podi/data/figs/28.png /><br><br>
     <img src= podi/data/figs/30.png />
     <br> <hr> <br>
-    <img src= podi/data/figs/33.png /><br>
-    <img src= podi/data/figs/34.png /><br>
-    <img src= podi/data/figs/35.png /><br>
+    <img src= podi/data/figs/33.png /><br><br>
+    <img src= podi/data/figs/34.png /><br><br>
+    <img src= podi/data/figs/35.png /><br><br>
   
   </body>
 
