dash app updates

--- a/podi/assets/index.html
+++ b/podi/assets/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="">
@@ -8,20 +9,25 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/homepage.css">
 
 	<meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Positive Disruption Data Explorer">
-    <meta name="twitter:description" content="The Positive Disruption model examines how adoption of low- and no-carbon technologies and practices can be expected to grow over the next 30 years.">
-    <meta name="twitter:image" content="https://epic-institute.github.io/data-explorer/img/social-twitter.png">
-    <meta property="og:title" content="Positive Disruption Data Explorer" />
-    <meta property="og:description" content="The Positive Disruption model examines how adoption of low- and no-carbon technologies and practices can be expected to grow over the next 30 years." />
-    <meta property="og:image" content="https://epic-institute.github.io/data-explorer/img/social-og.png" />
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:url" content="https://epic-institute.github.io/data-explorer/">
+	<meta name="twitter:title" content="Positive Disruption Data Explorer">
+	<meta name="twitter:description"
+		content="The Positive Disruption model examines how adoption of low- and no-carbon technologies and practices can be expected to grow over the next 30 years.">
+	<meta name="twitter:image" content="https://epic-institute.github.io/data-explorer/img/social-twitter.png">
+	<meta property="og:title" content="Positive Disruption Data Explorer" />
+	<meta property="og:description"
+		content="The Positive Disruption model examines how adoption of low- and no-carbon technologies and practices can be expected to grow over the next 30 years." />
+	<meta property="og:image" content="https://epic-institute.github.io/data-explorer/img/social-og.png" />
+	<meta property="og:image:type" content="image/png">
+	<meta property="og:url" content="https://epic-institute.github.io/data-explorer/">
 </head>
+
 <body>
 	<div id="mobile-popup">
 		<div class="row" id="mobile-logo">
@@ -34,10 +40,10 @@
 		</div>
 		<div class="row" id="mobile-text">
 			<p>Visit on a larger screen <br> to explore the data</p>
-		</div>	
+		</div>
 	</div>
 	<div class="row" id="data-explorer">
-			<!-- HEADER -->
+		<!-- HEADER -->
 		<div class="row header">
 			<div class="col-2 icon-col">
 				<a href="https://epicinstitute.org/" target="_blank">
@@ -57,107 +63,54 @@
 					<span id="about-button" class="header-item">about</span>
 					<div id="about-details">
 						<div id="close">
-							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#2fa69f" class="bi bi-x-lg" viewBox="0 0 16 16">
-								<path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#2fa69f"
+								class="bi bi-x-lg" viewBox="0 0 16 16">
+								<path
+									d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
 							</svg>
 						</div>
 						<p class="about-subtitle">
 							Positive Disruption Data Explorer
 						</p>
 						<p>
-							The Data Explorer is a web-based tool that allows for easy navigation through the Positive Disruption model results to examine how adoption of low- and no-carbon technologies and practices in the energy, agriculture, and land-use sectors can be expected to grow over the next 30 years, and the effect they will have on the process of reversing climate change.
+							The Data Explorer is a web-based tool that allows for easy navigation through the Positive
+							Disruption model results to examine how adoption of low- and no-carbon technologies and
+							practices in the energy, agriculture, and land-use sectors can be expected to grow over the
+							next 30 years, and the effect they will have on the process of reversing climate change.
 						</p>
 						<p class="about-subtitle">
 							Positive Disruption
 						</p>
 						<p>
-							The past several decades have seen extensive analysis of climate change science, and there is now an imminent need and remarkable opportunity to focus on climate solutions. While much of the existing climate science portrays the 1.5°C target as challenging given business-as-usual emissions projected from the energy and land use sectors, there is strong evidence to suggest that the future will not be business as usual. Rather, energy and land use will be disrupted by fast-emerging low- and negative-carbon technologies and practices. Governments, industries, and communities would benefit from decarbonization pathways that recognize this potential for Positive Disruption speed of scaling.
+							The past several decades have seen extensive analysis of climate change science, and there
+							is now an imminent need and remarkable opportunity to focus on climate solutions. While much
+							of the existing climate science portrays the 1.5°C target as challenging given
+							business-as-usual emissions projected from the energy and land use sectors, there is strong
+							evidence to suggest that the future will not be business as usual. Rather, energy and land
+							use will be disrupted by fast-emerging low- and negative-carbon technologies and practices.
+							Governments, industries, and communities would benefit from decarbonization pathways that
+							recognize this potential for Positive Disruption speed of scaling.
 						</p>
 						<p class="about-subtitle">
 							Feedback
 						</p>
 						<p>
-							Feedback in the form of suggested improvements to the data or code are welcome, just submit a <a href="https://github.com/Epic-Institute/data-explorer/pulls" target="_blank">pull request</a>. Feel free to share any other feedback on our <a href="https://github.com/Epic-Institute/data-explorer/discussions" target="_blank">Discussions page</a>.
+							Feedback in the form of suggested improvements to the data or code are welcome, just submit
+							a <a href="https://github.com/Epic-Institute/data-explorer/pulls" target="_blank">pull
+								request</a>. Feel free to share any other feedback on our <a
+								href="https://github.com/Epic-Institute/data-explorer/discussions"
+								target="_blank">Discussions page</a>.
 						</p>
 					</div>
-				</div>	
+				</div>
 			</div>
 		</div>
 		<div class="row ei-border-bottom">
-		</div>
-
-		<!-- FILTERS -->
-		<div class="row filters">
-			<div class="col-12">
-				<div class="row select">
-					<div class="col-4 select-output">
-						<span class="select-label">Positive Disruption model output</span>
-						<div class="buttons" id="buttons-vector"></div>
-					</div>
-					<div class="col-3 select-country">
-						<span class="select-label">Region</span>
-						<div class="dropdown" id="dropdown-region">
-							<div class="dropbtn" id="dropbtn-region"></div>
-							<div id="regions-search" class="dropdown-content">
-								<input type="text" id="search-box" placeholder="Search...">
-								<span id="reset-search">
-									<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="#2fa69f" class="bi bi-x-lg" viewBox="0 0 16 16">
-										<path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
-									</svg>
-								</span>
-							</div>
-							<div id="regions-menu" class="dropdown-content"></div>
-						</div>
-					</div>
-					<div class="col-2 select-scenario">
-						<span class="select-label">Scenario</span>
-						<div class="buttons" id="buttons-scenario"></div>
-					</div>
-					<div class="col-3 select-scenario">
-						<span class="select-label">Date</span>
-						<div class="buttons" id="time-slider"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="row ei-border-bottom">
-		</div>
-
-		<!-- RESULTS -->
-		<div class="row outputs">
-			<div class="col-4" id="region-details">
-				<div class="row">
-					<span id="region-flag"></span>
-					<span id="region-name"></span>
-				</div>
-				<div class="row cia-indicators"></div>
-			</div>
-			<div class="col-8" id="chart-options-container">
-				<div id="chart-options">
-					<span class="select-label" id="select-chart">Chart type</span>
-					<div id="chart-types"></div>
-					<div id="filters-col">
-						<div id="show-filters" class="select-label">
-							Graph options
-						</div>
-						<div id="graph-filters">
-						</div>
-					</div>
-				</div>
-				<div class="row" id="chart"></div>
-			</div>
 		</div>
 	</div>
+	</div>
+	</div>
 
-  	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/d3.min.js"></script>
-	<script src="js/d3-simple-slider.min.js"></script>
-	<script src="data/output.js"></script>
-	<script src="js/utils.js"></script>
-	<script src="js/popup.js"></script>
-	<script src="js/tooltip.js"></script>
-	<script src="js/chart.js"></script>
-	<script src="js/main.js"></script>
 </body>
+
 </html>
